--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Bloc Jams</title>
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300">
-        <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300">
+        <link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
         <link rel="stylesheet" type="text/css" href="styles/normalize.css">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <link rel="stylesheet" type="text/css" href="styles/landing.css">
@@ -15,7 +15,7 @@
         <section class="hero-content"> <!-- hero content -->
             <h1 class="hero-title">Turn the music up!</h1>
         </section>
-        <section class="selling-points container"> <!-- selling points --> 
+        <section class="selling-points container clearfix"> <!-- selling points --> 
             <div class="point column third">
                 <span class="ion-music-note"></span>
                 <h5 class="point-title">Choose your music</h5>
